...
    case tooFewDirectionChanges
    case custom(String)
    
    var message: String {
        switch self {
        case .tooFewNodes:
            return "Pattern must connect at least 6 nodes"
        case .tooFewDirectionChanges:
            return "Pattern must have at least 2 direction changes"
        case .custom(let message):
            return message
        }
    }
}

...
